Linux: Reboot Reason Tracking documentation (#338)
Adds documentation for the revamped reboot reason tracking in the [Linux SDK 1.1.0](https://github.com/memfault/memfault-linux-sdk/tree/1.1.0-kirkstone).

![FireShot Capture 002 - Linux Reboot Reason Tracking - Memfault Docs - localhost](https://user-images.githubusercontent.com/193881/201482734-20bbabbf-1432-49ae-8f37-e2fd9b3c7242.png)

Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

--- a/docs/android/android-reboot-events.mdx
+++ b/docs/android/android-reboot-events.mdx
@@ -1,7 +1,7 @@
 ---
 id: android-reboot-events
-title: Android Reboot Events
-sidebar_label: Reboot Events
+title: Android Reboot Reason Tracking
+sidebar_label: Reboot Reason Tracking
 ---
 
 :::note Prerequisite
