--- a/docs/linux/introduction.mdx
+++ b/docs/linux/introduction.mdx
@@ -119,6 +119,11 @@ monitoring][docs-issue-management].
 
 ### Reboot Reason Tracking
 
+The [Reboot Reason Tracking][docs-linux-reboot-reason-tracking] feature allows
+one to collect why devices are rebooting in the field (whether it be due to a
+crash, kernel panic or a firmware update). [Summaries and
+aggregates][docs-charts] can then be viewed from the Memfault web application.
+
 These features are fully in the domain of `memfaultd`.
 
 :::tip Get started
@@ -127,3 +132,6 @@ Take a look at our [getting-started guide][docs-linux-getting-started] to set up
 your integration.
 
 :::
+
+[docs-charts]: /docs/platform/charts
+[docs-linux-reboot-reason-tracking]: /docs/linux/reboot-reason-tracking
