--- a/docs/linux/linux-coredumps.mdx
+++ b/docs/linux/linux-coredumps.mdx
@@ -54,14 +54,14 @@ following the steps in this tutorial.
 
 ## Prerequisites
 
-### The `memfaultd` daemon, built with `coredump_plugin`
+### The `memfaultd` daemon, built with `plugin_coredump`
 
 Follow the [getting-started guide][docs-linux-getting-started] to learn how to
 set this up for your device. A key function of `memfaultd` is to preprocess and
 upload coredumps to the Memfault platform. It does this via its
-`coredump_plugin`.
+`plugin_coredump`.
 
-`coredump_plugin` is enabled by default. Read more on [how to configure which
+`plugin_coredump` is enabled by default. Read more on [how to configure which
 plugins `memfaultd` builds with][docs-linux-control-plugins].
 
 ### Linux kernel configuration
