--- a/docs/mcu/introduction.mdx
+++ b/docs/mcu/introduction.mdx
@@ -58,8 +58,8 @@ place, a number of modules can easily be integrated into the system:
   the device hangs, crashes or asserts unexpectedly.
 - [Reboot Reason Tracking](/docs/mcu/reboot-reason-tracking) - allows one to
   collect why devices are rebooting in the field (whether it be due to a crash,
-  brown out, crash or a firmware update). Summaries and aggregates and then be
-  viewed from the Memfault web application.
+  brownout or a firmware update). Summaries and aggregates can then be viewed
+  from the Memfault web application.
 - [Device Metrics](/docs/mcu/metrics-api) - A flexible way to collect system
   health vitals that are important to your application (whether it be battery
   life, connectivity statistics, performance measurements or something else!).
