--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -65,11 +65,15 @@ Below is a list of the APIs and payloads that may be rate-limited:
       <td>
         Reboot Events uploaded by Bort through the{" "}
         <Link to="/docs/android/android-bort/#memfault-caliper">Caliper</Link>{" "}
-        system (Android) or using the{" "}
+        system (Android), using the{" "}
         <Link to="/docs/mcu/reboot-reason-tracking/">
-          Reboot Reason Tracking subsystem
+          Reboot Reason Tracking subsystem (MCU)
         </Link>{" "}
-        (MCU).
+        or{" "}
+        <Link to="/docs/linux/reboot-reason-tracking/">
+          Reboot Reason Tracking plugin (Linux)
+        </Link>
+        .
       </td>
     </tr>{" "}
     <tr id="trace-events">
