Add note to laird doc on uploading elf (#340)

--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -7,6 +7,7 @@ description: "Integrate Memfault using Laird's Pinnacle™ 100 Cellular Modem."
 
 import MqttTopic from "@site/src/pages/_partials/_mqtt/_topic.mdx";
 import MqttAws from "@site/src/pages/_partials/_mqtt/_aws.mdx";
+import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
 
 In this guide we will walk through the steps for integrating the
 [Memfault Firmware SDK](https://github.com/memfault/memfault-firmware-sdk) into
@@ -57,6 +58,10 @@ Add the following options to your system's `prj.conf`:
 CONFIG_MEMFAULT_NCS_PROJECT_KEY="YOUR_PROJECT_KEY"
 CONFIG_MEMFAULT_NCS_FW_TYPE="pinnacle-fw"
 ```
+
+## Upload Symbol File
+
+<UploadSymbolFile />
 
 ## Publish data to the Memfault cloud
 
