Several typo fixes and improvements of the Android architecture images (#336)
* Several typo fixes and improvements to the images

* Prettified Code!

* Update docs/android/android-getting-started-guide.mdx

Co-authored-by: Heiko Behrens <mail@HeikoBehrens.net>

* Prettified Code!

* Update docs/android/android-getting-started-guide.mdx

Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

* Add link to the quotas docs page

* Prettified Code!

* use SVGs instead of PNGs for Android diagrams

Co-authored-by: can-memfault <can-memfault@users.noreply.github.com>
Co-authored-by: Heiko Behrens <mail@HeikoBehrens.net>
Co-authored-by: Fausto Núñez Alberro <fausto.nunez@mailbox.org>

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -52,7 +52,7 @@ a complete history of when features were added to the SDK.
 At a high level, the process of capturing and uploading diagnostics data
 involves the following components that work together.
 
-<p align="center">
+<p align="left">
   <img width="800" src="/binary-assets/android-bort-architecture.svg" />
 </p>
 
