--- a/docs/android/android-multi-device-support.mdx
+++ b/docs/android/android-multi-device-support.mdx
@@ -25,7 +25,7 @@ Bort running on the _client_ device will collect and forward diagnostic data to
 Bort running on the _server_ device via a socket connection, so that the data
 can be forwarded to Memfault's web services.
 
-<p align="center">
+<p align="left">
   <img width="1000" src="/binary-assets/android-client-server.svg" />
 </p>
 
