--- a/docs/android/custom-events.mdx
+++ b/docs/android/custom-events.mdx
@@ -78,7 +78,7 @@ than 1000 custom events per hour per device.
 
 :::
 
-## Adding Custom Custom Events
+## Adding Custom Events
 
 Tapping into the Custom Events feature, boils down to these steps:
 
