--- a/docs/android/introduction.mdx
+++ b/docs/android/introduction.mdx
@@ -21,7 +21,7 @@ Android? [Let us know!](mailto:hello@memfault.com)
    violations, and other issues are extracted, grouped, de-duplicated, and
    displayed in a searchable dashboard. Notifications can let you know when
    problems are detected. Memfault can also symbolicate native traces and
-   deobfuscate android traces.
+   deobfuscate Android traces.
 3. Interactive, zoomable timeline charts are provided to view system and custom
    metrics over time, including battery, WiFi, Bluetooth, and activity manager
    events. These metrics can be viewed per device and also across the entire
@@ -31,7 +31,7 @@ Android? [Let us know!](mailto:hello@memfault.com)
 
 ### Overview
 
-<p align="center">
+<p align="left">
   <img width="800" src="/binary-assets/android-bort-architecture.svg" />
 </p>
 
@@ -56,7 +56,7 @@ application is configured.
 For a detailed integration guide, see the
 [Getting Started Guide](android-getting-started-guide.mdx).
 
-To symbolicate native and ANR traces, as well as deobfuscate android traces,
+To symbolicate native and ANR traces, as well as deobfuscate Android traces,
 Memfault provides a CLI tool that can be integrated into your build system to
 upload the required symbols and mappings, respectively. See
 [Uploading Symbol Files](uploading-android-symbol-files.mdx) for more
