--- a/docs/mcu/data-from-firmware-to-the-cloud.mdx
+++ b/docs/mcu/data-from-firmware-to-the-cloud.mdx
@@ -30,7 +30,7 @@ Each of these chunks need to be posted to Memfault's
 interpretation of the chunks is done by the Memfault cloud.
 
 Building the path between getting chunks from the SDK to posting them to the
-HTTP API is the only integration work which needs to be done to get the data
+HTTP API is the only integration work which needs to be done to get the data.
 
 ## Implementation Notes
 
