--- a/docs/mcu/trace-events.mdx
+++ b/docs/mcu/trace-events.mdx
@@ -65,7 +65,7 @@ return address are captured in the trace event, you will be able to see the 2
 topmost frames (function name, source file and line) in Memfault's Issue UI and
 distinguish between the two.
 
-For test purposes, you can add a CLI command that logs trace events using the
+For test purposes, you can add a CLI command that logs trace events using
 different methods:
 
 ```c
