--- a/docs/mcu/uploading-data-with-mqtt.mdx
+++ b/docs/mcu/uploading-data-with-mqtt.mdx
@@ -17,9 +17,9 @@ chunk data. This has the following advantages:
   certificate management, which can reduce memory requirements.
 
 Since the data is not flowing directly from the device to Memfault's
-[chunk REST endpoint](https://api-docs.memfault.com/?version=latest#66b0e390-2c3e-4c0d-b6c2-836a287b9e5f)
-endpoint, some additional work is required to forward the data from the MQTT
-server to Memfault.
+[chunk REST endpoint](https://api-docs.memfault.com/?version=latest#66b0e390-2c3e-4c0d-b6c2-836a287b9e5f),
+some additional work is required to forward the data from the MQTT server to
+Memfault.
 
 Here are some example projects that use MQTT to post Memfault data:
 
