--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -265,7 +265,7 @@ this Release to be applicable to it.
 
 If you're on Android, you'll need to follow the
 [Android-specific OTA guide](/docs/android/android-releases-integration-guide)
-to upload an OTA payload, since it can only done using the
+to upload an OTA payload, since it can only be done using the
 [Memfault CLI](/docs/ci/install-memfault-cli/).
 
 :::
@@ -436,8 +436,8 @@ Release endpoint as this device.
 
 ### Device OTA Endpoint
 
-Memfault provides different types of Device OTA Endpoints; which gets uses
-depends on your requirements and existing setup.
+Memfault provides different types of Device OTA Endpoints for different device
+families and existing setups:
 
 | Device Family                                  | Typical OTA Update Endpoint                                                                                                                                                                     |
 | ---------------------------------------------- | ----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
