--- a/docs/linux/linux-getting-started-guide.mdx
+++ b/docs/linux/linux-getting-started-guide.mdx
@@ -104,7 +104,7 @@ Since `memfaultd` has a commercial license, you'll need to add an exception for
 it, for example in your `local.conf`:
 
 ```
-LICENSE_FLAGS_ACCEPTED:append = " commercial_memfaultd"
+LICENSE_FLAGS_ACCEPTED:append = " commercial_memfaultd commercial_memfault-core-handler"
 ```
 
 Add the necessary dependencies to your image file (note that `collectd` is
