Update header types for OTA page (#343)

--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -91,19 +91,19 @@ Another good place to learn more about delta updates for MCU-based devices in
 our Interrupt blog post
 [Saving bandwidth with delta firmware updates](https://interrupt.memfault.com/blog/ota-delta-updates).
 
-### Activating a Release
+## Activating a Release
 
 You can activate a Release for a Cohort of your choice. While Releases are
 shared between all Cohorts, activating them happens on a per-Cohort basis.
 
 When activating a Release for a Cohort, you can choose between two behaviors:
 
-#### Normal Activation of a Release
+### Normal Activation of a Release
 
 Releases activated _normally_ are available immediately to all devices in a
 Cohort.
 
-#### Staged Rollout of a Release
+### Staged Rollout of a Release
 
 Staged-rollout Release Activations can be used to make a Release available to a
 Cohort incrementally.
@@ -117,7 +117,7 @@ applicable to devices that are _staged_ in the Cohort.
 
 Memfault enables risk mitigation through different mechanisms.
 
-#### Monitoring the effect of Releases
+#### Monitoring the Effects of Releases
 
 As part of your OTA management workflow, make sure to set up
 [Metric and Issue Charts](/docs/platform/charts#metric-charts) to monitor the
