Metrics - Restore to Unarchive

--- a/docs/platform/metrics.mdx
+++ b/docs/platform/metrics.mdx
@@ -297,7 +297,7 @@ where settings can be adjusted, including how the metric counts against quotas:
 
 ![Memfault Metric editing](/img/docs/platform/metric-edit-min.png)
 
-## Archiving & Restoring Metrics
+## Archiving & Unarchiving Metrics
 
 <!-- prettier-ignore -->
 If a metric is no longer needed, it can be archived by navigating to <ProjectSettingsMetricsPath />,
