--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -58,6 +58,17 @@ Below is a list of the APIs and payloads that may be rate-limited:
         (MCU).
       </td>
     </tr>{" "}
+    <tr id="custom-data-recordings">
+      <td>Ingestion of Custom Data Recordings</td>
+      <td>Device</td>
+      <td>All</td>
+      <td>
+        <Link to="/docs/platform/inspecting-a-device/#custom-data-recordings">
+          Custom Data Recordings (CDR){" "}
+        </Link>
+        are sets of user defined data of any custom format that are sent from a device.
+      </td>
+    </tr>
     <tr id="reboot-events">
       <td>Ingestion of Reboot Events</td>
       <td>Device</td>
@@ -75,8 +86,7 @@ Below is a list of the APIs and payloads that may be rate-limited:
         </Link>
         .
       </td>
-    </tr>{" "}
-    <tr id="trace-events">
+    </tr> <tr id="trace-events">
       <td>Ingestion of Trace Events</td>
       <td>Device</td>
       <td>MCU</td>
