MFLT-8288 Move data transfer troubleshooting to separate page (#351)
### Summary
Create a new doc in favor of the partial for data transfer troubleshooting.
Swap out the partial references for a link to the doc.

### Test plan
Check rendering and all pages link correctly.

--- a/docs/mcu/arm-cortex-m-guide.mdx
+++ b/docs/mcu/arm-cortex-m-guide.mdx
@@ -18,7 +18,6 @@ import RtosPorts from "@site/src/pages/_partials/_steps/_rtos-ports.mdx";
 import CoredumpDependency from "@site/src/pages/_partials/_steps/_coredump-dependency.mdx";
 import RegisterAssert from "@site/src/pages/_partials/_steps/_register-assert.mdx";
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
 import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
 import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
 import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
@@ -132,7 +131,8 @@ instrumentation, and test the integration!
 
 ### Troubleshooting Data Transfer
 
-<DataTransferTroubleshooting />
+See the docs on
+[data transfer troubleshooting](/docs/troubleshooting/data-transfer-troubleshooting).
 
 ## Data Transport Steps
 
