--- a/docs/mcu/arm-infineon-modustoolbox-guide.mdx
+++ b/docs/mcu/arm-infineon-modustoolbox-guide.mdx
@@ -6,7 +6,6 @@ sidebar_label: ModusToolbox™ SDK for PSoC™ 6
 
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
 import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
-import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
 import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
 import AddCliTestCommands from "@site/src/pages/_partials/_steps/_add-cli-test-commands.mdx";
 
@@ -312,7 +311,8 @@ build/CY8CKIT-062S2-43012/Debug/your_application.elf
 
 ### Troubleshooting Data Transfer
 
-<DataTransferTroubleshooting />
+See the docs on
+[data transfer troubleshooting](/docs/troubleshooting/data-transfer-troubleshooting).
 
 ## Data Transport Steps
 
