--- a/docs/mcu/self-serve-local-testing.mdx
+++ b/docs/mcu/self-serve-local-testing.mdx
@@ -5,7 +5,6 @@ sidebar_label: Local Testing
 ---
 
 import UploadSymbolFile from "@site/src/pages/_partials/_steps/_upload-symbol-file.mdx";
-import DataTransferTroubleshooting from "@site/src/pages/_partials/_steps/_data-transfer-troubleshooting.mdx";
 import PostChunksLocally from "@site/src/pages/_partials/_steps/_post-chunks-locally.mdx";
 import PublishDataToCloud from "@site/src/pages/_partials/_steps/_publish-data-to-cloud.mdx";
 import DefineFirstTraceEvent from "@site/src/pages/_partials/_steps/_define-first-trace-event.mdx";
@@ -37,7 +36,8 @@ leveraging Memfault and verify that everything is working properly.
 
 ### Troubleshooting Data Transfer
 
-<DataTransferTroubleshooting />
+See the docs on
+[data transfer troubleshooting](/docs/troubleshooting/data-transfer-troubleshooting).
 
 ### Next Steps
 
