--- a/docs/troubleshooting/data-transfer-troubleshooting.mdx
+++ b/docs/troubleshooting/data-transfer-troubleshooting.mdx
@@ -1,3 +1,9 @@
+---
+id: data-transfer-troubleshooting
+title: Data Transfer Troubleshooting
+sidebar_label: Data Transfer Troubleshooting
+---
+
 If you encounter any issues in your data transfer implementation, Memfault has
 tools to help debug!
 
