Typo fix in CDR docs (#353)
Fix typo in the CDR docs

--- a/docs/platform/inspecting-a-device.mdx
+++ b/docs/platform/inspecting-a-device.mdx
@@ -126,7 +126,7 @@ format. Therefore, we use `application/vnd.tcpdump.pcap` as the second MIME type
 in the list. This is the [official IANA-registered][iana-mime-types] type for a
 pcap file (Wireshark dump).
 
-Lastly, `application/octet-stream` is used in the MIME types list. This type is
+Lastly, `application/octet-stream` is used in the MIME types list. This type
 essentially means "application specific binary data".
 
 Even though Memfault does not have a Timeline visualizer for pcap data, let
