Add an example OTA sequence diagram (#349)

--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -209,6 +209,10 @@ The following rules apply to all active Releases per Cohort:
 In short, the precedence can be summarized like so: **Delta Release** > **MPT
 Release** > **Full Release**.
 
+An example:
+
+![](/img/docs/platform/ota-example.excalidraw.png)
+
 ## Managing OTA Updates with Memfault
 
 The Memfault application contains OTA-related features in several of its views.
