Replace ota seq diagram to match existing style (#355)

--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -211,7 +211,15 @@ Release** > **Full Release**.
 
 An example:
 
-![](/img/docs/platform/ota-example.excalidraw.png)
+<!-- Doc source: https://www.figma.com/file/GQIimU8iOtCrxGrdE6RxL3/Memfault-SDK-Architecture?node-id=808%3A10&t=2xgYRnOsaxVM51AB-0 -->
+
+<p align="center">
+  <img
+    width="700"
+    src="/img/docs/platform/ota-example.svg"
+    alt="ota-example-diagram"
+  />
+</p>
 
 ## Managing OTA Updates with Memfault
 
