Fresh ota sequence diagram

--- a/docs/platform/ota.mdx
+++ b/docs/platform/ota.mdx
@@ -211,7 +211,7 @@ Release** > **Full Release**.
 
 An example:
 
-<!-- Doc source: https://www.figma.com/file/GQIimU8iOtCrxGrdE6RxL3/Memfault-SDK-Architecture?node-id=808%3A10&t=2xgYRnOsaxVM51AB-0 -->
+<!-- Doc source: https://www.figma.com/file/GQIimU8iOtCrxGrdE6RxL3/Memfault-SDK-Architecture?node-id=814%3A45&t=2Khmpl8shDCvAi0s-0 -->
 
 <p align="center">
   <img
